--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/material-top-tabs": "^6.3.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "@reduxjs/toolkit": "^1.9.0",
     "dayjs": "^1.11.6",
     "react": "18.1.0",
     "react-native": "0.70.6",
@@ -21,7 +22,8 @@
     "react-native-pager-view": "^6.1.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-native-tab-view": "^3.3.0"
+    "react-native-tab-view": "^3.3.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
