--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@reduxjs/toolkit": "^1.9.0",
+    "axios": "^1.2.2",
     "dayjs": "^1.11.6",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-calendars": "^1.1291.1",
+    "react-native-dotenv": "^3.4.7",
     "react-native-pager-view": "^6.1.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
@@ -31,6 +33,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
     "@types/react-test-renderer": "^18.0.0",
