--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.70.6",
     "react-native-calendars": "^1.1291.1",
     "react-native-dotenv": "^3.4.7",
+    "react-native-image-picker": "^5.0.1",
     "react-native-pager-view": "^6.1.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
